--- a/build.xml
+++ b/build.xml
@@ -55,7 +55,7 @@
 		
 		<taskdef name="s3" classname="org.springframework.build.aws.ant.SimpleStorageService" classpathref="s3.classpath"/>
 
-		<s3 accessKey="${accessKey}" secretKey="${secretKey}">
+		<s3 accessKey="${dist.accessKey}" secretKey="${dist.secretKey}">
 			
 			<upload bucketName="dist.springsource.com" toDir="release/STS/discovery" publicRead="true">
 				<fileset dir="${basedir}/target/">
