some tests around access properties

--- a/build.xml
+++ b/build.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="build" default="build-discovery" basedir="." xmlns:antcontrib="antlib:net.sf.antcontrib">
 	
-	<property file="${dist.properties}"/>
-	
 	<macrodef name="extract-version">
 		<attribute name="property"/>
 		<attribute name="file"/>
@@ -24,9 +22,16 @@
 		</sequential>
 	</macrodef>
 	
+	<property file="${dist.properties}"/>
+	
 	<target name="build-and-deploy">
 		<antcall target="build-discovery"/>
-		<antcall target="deploy-discovery"/>
+		
+		<antcall target="deploy-discovery">
+			<param name="accessKey" value="${accessKey}"/>
+			<param name="secretKey" value="${secretKey}"/>
+		</antcall>
+
 	</target>
 	
 	<target name="build-discovery">
@@ -48,6 +53,7 @@
 		
 	<target name="deploy-discovery">
 		<echo>Publishing to Amazon S3</echo>
+		<echo>${dist.properties}</echo>
 		
 		<path id="s3.classpath"> 
 		    <fileset dir="${basedir}/tools/s3-libs">
