--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -54,7 +54,7 @@
             license="EPL"
             name="m2eclipse 1.0.100"
             provider="Eclipse, JBoss, Sonatype, VMware"
-            platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=4.2.0))"
+            platformFilter="(platform.version&gt;=3.6.0)"
             siteUrl="http://dist.springsource.com/release/TOOLS/third-party/m2e/">
          <iu id="org.eclipse.m2e.feature" />
          <iu id="org.eclipse.m2e.logback.feature" />
@@ -166,8 +166,7 @@
                url="http://pmd.sourceforge.net/">
          </overview>
       </connectorDescriptor>
-
-      <connectorDescriptor
+            <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
             id="org.codehaus.groovy.eclipse.feature"
@@ -176,8 +175,8 @@
             groupId="certified"
             name="Groovy Eclipse"
             provider="Codehaus.org"
-            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
+            platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.6.9))"
+            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/groovy-grails/e3.6">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <iu id="org.codehaus.groovy.m2eclipse" />
          <iu id="org.codehaus.groovy18.feature" />
@@ -197,8 +196,8 @@
             groupId="certified"
             name="Groovy Eclipse"
             provider="Codehaus.org"
-            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
+            platformFilter="(platform.version&gt;=3.7.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/groovy-grails/e3.7">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <iu id="org.codehaus.groovy.m2eclipse" />
          <iu id="org.codehaus.groovy18.feature" />
@@ -209,40 +208,17 @@
                url="http://groovy.codehaus.org/Eclipse+Plugin">
          </overview>
       </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
-            id="org.codehaus.groovy.eclipse.feature"
-            kind="task, document"
-            license="Free, EPL/ASL"
-            groupId="certified"
-            name="Groovy Eclipse"
-            provider="Codehaus.org"
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
-         <iu id="org.codehaus.groovy.eclipse.feature" />
-         <iu id="org.codehaus.groovy.m2eclipse" />
-         <iu id="org.codehaus.groovy18.feature" />
-         <icon
-               image32="images/groovy_32.png"></icon>
-         <overview
-               summary="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
-               url="http://groovy.codehaus.org/Eclipse+Plugin">
-         </overview>
-      </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
-            id="org.grails.ide.eclipse"
+            id="com.springsource.sts.grails"
             kind="task, document"
             groupId="certified"
-            license="Free, EPL"
+            license="Free, Commercial"
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
+            platformFilter="(platform.version&lt;=3.5.9)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/groovy-grails/e3.5">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -251,18 +227,17 @@
                url="http://www.grails.org/STS+Integration">
          </overview>
       </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
-            id="org.grails.ide.eclipse"
+            id="com.springsource.sts.grails"
             kind="task, document"
             groupId="certified"
-            license="Free, EPL"
+            license="Free, Commercial"
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
+            platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.6.9))"
+            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/groovy-grails/e3.6">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -271,18 +246,17 @@
                url="http://www.grails.org/STS+Integration">
          </overview>
       </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Support for creating Grails projects, automatic dependency management, running commands and editing GSPs."
-            id="org.grails.ide.eclipse"
+            id="com.springsource.sts.grails"
             kind="task, document"
             groupId="certified"
-            license="Free, EPL"
+            license="Free, Commercial"
             name="Grails Support"
             provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
+            platformFilter="(platform.version&gt;=3.7.0)"
+            siteUrl="http://dist.springsource.com/release/TOOLS/third-party/groovy-grails/e3.7">
          <icon
                image32="images/grails_32.png">
          </icon>
@@ -291,18 +265,17 @@
                url="http://www.grails.org/STS+Integration">
          </overview>
       </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="Support for importing and working with Gradle projects in STS, automatic dependency management, executing Gradle tasks."
             id="com.springsource.sts.gradle.feature"
             kind="task, document"
             groupId="certified"
-            license="Free, EPL"
+            license="Free, Commercial"
             name="Gradle Support"
             provider="SpringSource, a division of VMware, Inc."
             platformFilter="(platform.version&gt;=3.6.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/gradle">
+            siteUrl="http://dist.springsource.com/release/TOOLS/gradle">
          <icon
                image32="images/gradle_32.png">
          </icon>
@@ -311,69 +284,6 @@
                url="http://static.springsource.org/sts/docs/latest/reference/html/gradle/index.html">
          </overview>
       </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Full-featured support for working with Spring projects"
-            id="org.springframework.ide.eclipse.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring IDE"
-            provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e3.7/">
-         <iu id="org.springframework.ide.eclipse.feature" />
-         <iu id="org.springframework.ide.eclipse.aop.feature" />
-         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
-         <iu id="org.springframework.ide.eclipse.security.feature" />
-         <iu id="org.springframework.ide.eclipse.webflow.feature" />
-         <iu id="org.springframework.ide.eclipse.batch.feature" />
-         <iu id="org.springframework.ide.eclipse.integration.feature" />
-         <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
-         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
-         <iu id="org.springframework.ide.eclipse.maven.feature" />
-         <icon
-               image32="images/springsource_32.png">
-         </icon>
-         <overview
-               summary="Full-featured support for working with Spring projects.">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="Full-featured support for working with Spring projects"
-            id="org.springframework.ide.eclipse.feature"
-            kind="task"
-            groupId="certified"
-            license="Free, EPL"
-            name="Spring IDE"
-            provider="SpringSource, a division of VMware, Inc."
-            platformFilter="(platform.version&gt;=4.2.0)"
-            siteUrl="http://dist.springsource.com/milestone/TOOLS/update/e4.2/">
-         <iu id="org.springframework.ide.eclipse.feature" />
-         <iu id="org.springframework.ide.eclipse.aop.feature" />
-         <iu id="org.springframework.ide.eclipse.ajdt.feature" />
-         <iu id="org.springframework.ide.eclipse.osgi.feature" />
-         <iu id="org.springframework.ide.eclipse.security.feature" />
-         <iu id="org.springframework.ide.eclipse.webflow.feature" />
-         <iu id="org.springframework.ide.eclipse.batch.feature" />
-         <iu id="org.springframework.ide.eclipse.integration.feature" />
-         <iu id="org.springframework.ide.eclipse.autowire.feature" />
-         <iu id="org.springframework.ide.eclipse.roo.feature" />
-         <iu id="org.springframework.ide.eclipse.mylyn.feature" />
-         <iu id="org.springframework.ide.eclipse.maven.feature" />
-         <icon
-               image32="images/springsource_32.png">
-         </icon>
-         <overview
-               summary="Full-featured support for working with Spring projects.">
-         </overview>
-      </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.frameworks"
             description="Spring Roo is a next-generation rapid application development tool for Java developers. With Roo you can easily build full Java applications in minutes."
@@ -429,7 +339,6 @@
                url="http://www.grails.org">
          </overview>
       </connectorDescriptor>
-
       <connectorDescriptor
             categoryId="org.eclipse.mylyn.discovery.directory.categories.Utilities"
             description="Infinitest is a continuous test runner for JUnit tests. Whenever you change a class, Infinitest runs your tests for you. It’s smart about what tests to run."
@@ -710,7 +619,7 @@
             license="Free, EPL"
             name="Eclipse Marketplace Client"
             provider="Eclipse EPP"
-            platformFilter="(&amp;(platform.version&gt;=3.6.0)(platform.version&lt;=3.6.9))"
+            platformFilter="(platform.version&lt;=3.6.9)"
             siteUrl="http://download.eclipse.org/releases/helios">
          <iu id="org.eclipse.epp.mpc" />
          <icon
@@ -729,27 +638,8 @@
             license="Free, EPL"
             name="Eclipse Marketplace Client"
             provider="Eclipse EPP"
-            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
+            platformFilter="(platform.version&gt;=3.7.0)"
             siteUrl="http://download.eclipse.org/releases/indigo">
-         <iu id="org.eclipse.epp.mpc" />
-         <icon
-               image32="images/eclipse_32.gif">
-         </icon>
-         <overview
-               url="http://www.eclipse.org/mpc/">
-         </overview>
-      </connectorDescriptor>
-
-      <connectorDescriptor
-            categoryId="org.eclipse.mylyn.discovery.directory.categories.Utilities"
-            description="Client to install components from the Eclipse Marketplace. SpringSource does not make any guarantees for those components."
-            id="org.eclipse.epp.mpc"
-            kind="task"
-            license="Free, EPL"
-            name="Eclipse Marketplace Client"
-            provider="Eclipse EPP"
-            platformFilter="(platform.version&gt;=3.8.0)"
-            siteUrl="http://download.eclipse.org/releases/juno">
          <iu id="org.eclipse.epp.mpc" />
          <icon
                image32="images/eclipse_32.gif">
