--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -167,7 +167,7 @@
          </overview>
       </connectorDescriptor>
 
-     <!-- Groovy-Eclipse for Juno -->
+     <!-- Groovy-Eclipse for Indigo -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
@@ -209,7 +209,7 @@
       </connectorDescriptor>
 
 
-     <!-- Groovy-Eclipse for Indigo -->
+     <!-- Groovy-Eclipse for Juno -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
@@ -269,6 +269,25 @@
          <overview
                summary="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
                url="http://groovy.codehaus.org/Eclipse+Plugin">
+         </overview>
+      </connectorDescriptor>
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace."
+            id="org.codehaus.groovy20.feature"
+            kind="task, document"
+            license="Free, EPL/ASL"
+            groupId="certified"
+            name="Groovy Eclipse"
+            provider="Codehaus.org"
+            platformFilter="(platform.version&gt;=4.2.0)"
+            siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
+         <iu id="org.codehaus.groovy20.feature" />
+         <icon
+               image32="images/groovy_32.png"></icon>
+         <overview
+               summary="The Groovy 2.0 compiler provides a static compilation mode for Groovy and many other features.  However, it is not compatible with the most recent version of Grails 2.x."
+               url="http://groovy.codehaus.org/Compiler+Switching+within+Groovy-Eclipse">
          </overview>
       </connectorDescriptor>
 
