added Google plugin item for Eclipse 4.2

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -507,6 +507,8 @@
                url="http://improvingworks.com">
          </overview>
       </connectorDescriptor>
+
+      <!-- Google Plugin for Eclipse -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The Google Plugin for Eclipse is the fastest way to start developing Google Web Toolkit and App Engine applications."
@@ -528,6 +530,7 @@
                url="http://code.google.com/eclipse/docs/users_guide.html">
          </overview>
       </connectorDescriptor>
+
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The Google Plugin for Eclipse is the fastest way to start developing Google Web Toolkit and App Engine applications."
@@ -549,6 +552,7 @@
                url="http://code.google.com/eclipse/docs/users_guide.html">
          </overview>
       </connectorDescriptor>
+
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="The Google Plugin for Eclipse is the fastest way to start developing Google Web Toolkit and App Engine applications."
@@ -556,7 +560,7 @@
             id="com.google.gdt.eclipse.suite.e37.feature"
             license="Free, Commercial"
             name="Google Plugin for Eclipse"
-            platformFilter="(platform.version&gt;=3.7.0)"
+            platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
             provider="Google"
             siteUrl="http://dl.google.com/eclipse/plugin/3.7">
          <iu id="com.google.gdt.eclipse.suite.e37.feature" />
@@ -570,6 +574,29 @@
                url="http://code.google.com/eclipse/docs/users_guide.html">
          </overview>
       </connectorDescriptor>
+
+      <connectorDescriptor
+            categoryId="com.springsource.sts.discovery-directory.framework.support"
+            description="The Google Plugin for Eclipse is the fastest way to start developing Google Web Toolkit and App Engine applications."
+            kind="task"
+            id="com.google.gdt.eclipse.suite.e42.feature"
+            license="Free, Commercial"
+            name="Google Plugin for Eclipse"
+            platformFilter="(platform.version&gt;=4.2.0)"
+            provider="Google"
+            siteUrl="http://dl.google.com/eclipse/plugin/4.2">
+         <iu id="com.google.gdt.eclipse.suite.e42.feature" />
+         <iu id="com.google.appengine.eclipse.sdkbundle.feature" />
+         <iu id="com.google.gwt.eclipse.sdkbundle.e42.feature" />
+         <icon
+               image32="images/google_32.png">
+         </icon>
+         <overview
+               summary="%google.description"
+               url="http://code.google.com/eclipse/docs/users_guide.html">
+         </overview>
+      </connectorDescriptor>
+
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
             description="DataNucleus provides its own plugin for use within Eclipse, giving access to many features of DataNucleus from the convenience of your development environment."
