Tweaking names and descriptions.

--- a/org.springsource.ide.eclipse.discovery/plugin.xml
+++ b/org.springsource.ide.eclipse.discovery/plugin.xml
@@ -199,12 +199,12 @@
      <!-- Groovy-Eclipse for Indigo -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
             id="org.codehaus.groovy.eclipse.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
@@ -213,18 +213,18 @@
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
                url="http://groovy.codehaus.org/Eclipse+Plugin">
          </overview>
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace."
+            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
             id="org.codehaus.groovy20.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.7.0)(platform.version&lt;=3.7.9))"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.7">
@@ -238,15 +238,15 @@
       </connectorDescriptor>
 
 
-     <!-- Groovy-Eclipse for Juno -->
+     <!-- Groovy-Eclipse for Juno 3.8 -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
             id="org.codehaus.groovy.eclipse.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
@@ -255,18 +255,18 @@
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
                url="http://groovy.codehaus.org/Eclipse+Plugin">
          </overview>
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace."
+            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
             id="org.codehaus.groovy20.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(&amp;(platform.version&gt;=3.8.0)(platform.version&lt;=3.8.9))"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e3.8">
@@ -279,35 +279,35 @@
          </overview>
       </connectorDescriptor>
 
+     <!-- Groovy-Eclipse for Juno 4.2 -->
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
+            description="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers."
             id="org.codehaus.groovy.eclipse.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(platform.version&gt;=4.2.0)"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
          <iu id="org.codehaus.groovy.eclipse.feature" />
          <iu id="org.codehaus.groovy.m2eclipse" />
-         <iu id="org.codehaus.groovy18.feature" />
          <icon
                image32="images/groovy_32.png"></icon>
          <overview
-               summary="The purpose of the Groovy Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
+               summary="The purpose of the Groovy-Eclipse plugin is to promote the Groovy platform and ecosystem as a viable and productive development environment for Java developers working in the Eclipse SDK."
                url="http://groovy.codehaus.org/Eclipse+Plugin">
          </overview>
       </connectorDescriptor>
       <connectorDescriptor
             categoryId="com.springsource.sts.discovery-directory.framework.support"
-            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace."
+            description="This feature provides the Groovy 2.0 compiler for Groovy-Eclipse.  Once installed, the 2.0 compiler becomes the default for the workspace.  And other compilers can be uses through the system preferences."
             id="org.codehaus.groovy20.feature"
             kind="task, document"
             license="Free, EPL/ASL"
             groupId="certified"
-            name="Groovy Eclipse"
+            name="Groovy 2.0 Compiler for Groovy-Eclipse"
             provider="Codehaus.org"
             platformFilter="(platform.version&gt;=4.2.0)"
             siteUrl="http://dist.springsource.com/milestone/TOOLS/third-party/groovy-grails/e4.2">
